// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className="root
        
        isVariantFlat"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly disabled 1`] = `
<div
  className="root
        
        isVariantFlat
        
        isDisabled"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly error 1`] = `
<div
  className="root
        isTypeError
        isVariantBordered"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly raised 1`] = `
<div
  className="root
        
        isVariantFlat
        
        
        isRaised"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        isTypeWarning
        isVariantBordered
        isDense
        isDisabled
        isRaised"
  id="custom-id"
>
  <p>
    Card content
  </p>
</div>
`;
